@@ -1,19 +1,19 @@
-// Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
+// Copyright 2020 Oath Inc. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.integration;
 
 import com.yahoo.config.provision.CloudName;
 import com.yahoo.config.provision.Environment;
 import com.yahoo.config.provision.RegionName;
+import com.yahoo.config.provision.zone.RoutingMethod;
 import com.yahoo.config.provision.zone.ZoneApi;
 import com.yahoo.config.provision.zone.ZoneFilter;
 import com.yahoo.config.provision.zone.ZoneId;
 import com.yahoo.config.provision.zone.ZoneList;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -25,20 +25,22 @@ import java.util.stream.Collectors;
 public class ZoneFilterMock implements ZoneList {
 
     private final List<ZoneApi> zones;
+    private final Map<ZoneApi, Set<RoutingMethod>> zoneRoutingMethods;
     private final boolean negate;
 
-    private ZoneFilterMock(List<ZoneApi> zones, boolean negate) {
+    private ZoneFilterMock(List<ZoneApi> zones, Map<ZoneApi, Set<RoutingMethod>> zoneRoutingMethods, boolean negate) {
         this.zones = zones;
+        this.zoneRoutingMethods = zoneRoutingMethods;
         this.negate = negate;
     }
 
-    public static ZoneFilter from(Collection<ZoneApi> zones) {
-        return new ZoneFilterMock(new ArrayList<>(zones), false);
+    public static ZoneFilter from(Collection<? extends ZoneApi> zones, Map<ZoneApi, Set<RoutingMethod>> routingMethods) {
+        return new ZoneFilterMock(List.copyOf(zones), Map.copyOf(routingMethods), false);
     }
 
     @Override
     public ZoneList not() {
-        return new ZoneFilterMock(zones, ! negate);
+        return new ZoneFilterMock(zones, zoneRoutingMethods, ! negate);
     }
 
     @Override
@@ -53,7 +55,12 @@ public class ZoneFilterMock implements ZoneList {
 
     @Override
     public ZoneList directlyRouted() {
-        return all();
+        return routingMethod(RoutingMethod.exclusive);
+    }
+
+    @Override
+    public ZoneList routingMethod(RoutingMethod method) {
+        return filter(zone -> zoneRoutingMethods.getOrDefault(zone, Set.of()).contains(method));
     }
 
     @Override
@@ -63,17 +70,17 @@ public class ZoneFilterMock implements ZoneList {
 
     @Override
     public ZoneList in(Environment... environments) {
-        return filter(zone -> new HashSet<>(Arrays.asList(environments)).contains(zone.getEnvironment()));
+        return filter(zone -> Set.of(environments).contains(zone.getEnvironment()));
     }
 
     @Override
     public ZoneList in(RegionName... regions) {
-        return filter(zone -> new HashSet<>(Arrays.asList(regions)).contains(zone.getRegionName()));
+        return filter(zone -> Set.of(regions).contains(zone.getRegionName()));
     }
 
     @Override
     public ZoneList among(ZoneId... zones) {
-        return filter(zone -> new HashSet<>(Arrays.asList(zones)).contains(zone.getId()));
+        return filter(zone -> Set.of(zones).contains(zone.getId()));
     }
 
     @Override
@@ -93,7 +100,7 @@ public class ZoneFilterMock implements ZoneList {
                                 condition.negate().test(zone) :
                                 condition.test(zone))
                         .collect(Collectors.toList()),
-                false);
+                zoneRoutingMethods, false);
     }
 
 }
